# yanpub

./: .dockerignore  .gitignore  CHANGELOG.md  DESIGN.md  Dockerfile  LICENSE  README.md  debug_turing.py  deploy.sh  docker-compose.yml  pyproject.toml  test_playwright_e2e.py  test_templates.py
.dumate/inbox/: Run pytest(1).txt  Run pytest(2).txt  Run pytest.txt  Run ruff f.txt  问题清单    .txt
.github/workflows/: ci.yml  quality.yml  release.yml
docker/: .env.example  entrypoint.sh  lang-repos.conf
docs/: adapter-guide.md
examples/: hello.duan
scripts/: cache_keywords.py  release.py
src/yanpub/: __init__.py  cli.py  i18n.py
src/yanpub/adapters/: _keywords_cache.py  _path_resolver.py
src/yanpub/adapters/duan/: CONTRIBUTING.md  README.md  adapter.py  adapter.yaml  keywords.json
src/yanpub/adapters/hanyu/: CONTRIBUTING.md  README.md  adapter.py  adapter.yaml  keywords.json
src/yanpub/adapters/hua/: adapter.py  adapter.yaml  keywords.json
src/yanpub/adapters/mingdao/: CONTRIBUTING.md  README.md  adapter.py  adapter.yaml  keywords.json
src/yanpub/adapters/moyan/: CONTRIBUTING.md  README.md  adapter.py  adapter.yaml  (+1 more)
src/yanpub/cli/: __init__.py  __main__.py  adapter.py  bench.py  challenge.py  debug_ai.py  docs_site.py  examples.py  hot_update.py  i18n_cmds.py  infra.py  lint.py  lsp.py  pkg.py  playground_cmds.py  plugin.py  private_registry.py  quality.py  refactor.py  run_repl.py  sandbox.py  signing.py  wasm.py  workspace.py
src/yanpub/core/: __init__.py  adapter.py  adapter_compat.py  adapter_regression.py  adapter_template.py  adapter_test.py  adapter_test_builtin.py  adapter_test_report.py  ai_assist.py  ai_data.py  audit.py  baseline.py  bench_viz.py  benchmark.py  cache.py  compat.py  config.py  dap_server.py  debugger.py  examples.py  formatter.py  health.py  hotreload.py  hotupdate.py  keyword_docs.py  lazy_loader.py  linter.py  monitor.py  navigator.py  plugin.py  pool.py  profiler.py  quality.py  refactor.py  registry.py  sandbox.py  signing.py  syntax_matrix.py  syntax_matrix_data.py  syntax_matrix_html.py  (+3 more)
src/yanpub/docs/: comparator.py  generator.py  i18n_docs.py  search.py  seo.py  site_builder.py  site_templates.py  translator.py
src/yanpub/i18n_pkg/: _core.py  translations.py  translator.py
src/yanpub/lsp/: __init__.py  folding.py  handlers_code_action.py  handlers_core.py  handlers_navigation.py  protocol.py  semantic_tokens.py  server.py
src/yanpub/pkg/: __init__.py  cache.py  installer.py  lockfile.py  private_registry.py  registry.py  remote.py  resolver.py  semantic_release.py  signed_registry.py  version_constraint.py  versionset.py  workspace.py  workspace_lock.py
src/yanpub/playground/: __init__.py  challenge.py  collab.py  collab_history.py  crdt.py  project.py  routes_ai.py  routes_challenge.py  routes_monitor.py  routes_project.py  routes_share.py  security.py  server.py  share.py
src/yanpub/repl/: __init__.py  core.py  error_display.py
src/yanpub/vscode/: README.md  language-configuration.json  package.json
tests/: conftest.py  test_adapter.py  test_adapter_e2e.py  test_adapter_template.py  test_adapter_test.py  test_core_modules.py  test_debugger.py  test_docs.py  test_e2e.py  test_examples.py  test_integration.py  test_lsp.py  test_perf_optimize.py  test_pkg.py  test_playground.py  test_playground_api.py  test_playground_security.py  test_project.py  test_refactor.py  test_repl.py  test_sandbox.py  test_share.py  test_syntax_matrix.py  test_v020.py  test_v030.py  test_v040.py  test_v050.py  test_v060.py  test_v070.py  test_v080.py  test_v100.py  test_v140.py
(+231 files in other folders)
