[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yanpub"
version = "1.2.0"
description = "言埠 — 中文编程语言统一基础设施"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "YanPub Team" }]
keywords = [
    "chinese",
    "programming-language",
    "infrastructure",
    "lsp",
    "repl",
    "playground",
    "duan",
    "yan",
    "moyan",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
]

dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "prompt-toolkit>=3.0",
    "httpx>=0.24",
    "fastapi",
    "lsprotocol",
    "httpx2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]
playground = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "websockets>=11.0",
]
lsp = [
    "pygls>=1.0",
]
all = [
    "yanpub[playground,lsp,dev]",
]

[project.scripts]
yanpub = "yanpub.cli:main"

[project.urls]
Repository = "https://github.com/skywalk163/yanpub"
Changelog = "https://github.com/skywalk163/yanpub/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/yanpub"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
